# image-processing

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  requirements.txt
basic_exercises/doc/: Theoretical_exercises.tex  Theorical_exercises.tex
basic_exercises/exercise1/: Makefile
basic_exercises/exercise11/: exercise_11a_flatzone.cpp
basic_exercises/exercise2/a/: Makefile  exercise_02a_thresh.cpp
basic_exercises/exercise2/b/: Makefile  exercise_02b_compare.cpp  exercise_02b_compare.hpp
basic_exercises/exercise2/c/: Makefile  exercise_02c_inf.cpp  exercise_02c_sup.cpp
basic_exercises/exercise3/a/: exercise_03a_erosion.hpp
basic_exercises/exercise3/b/: Makefile  exercise_03b_dilation.cpp  exercise_03b_dilation.hpp
basic_exercises/exercise4/a/: Makefile  exercise_04a_opening.cpp
basic_exercises/exercise4/b/: exercise_04b_closing.cpp
basic_exercises/exercise5/a/: Makefile
basic_exercises/exercise5/b/: erosion.hpp  exercise_04b_closing.cpp
basic_exercises/exercise6/b/: Makefile  exercise_06b_opening_closing.cpp
basic_exercises/exercise7/a/: Makefile  closing.cpp  erosion.cpp  exercise_06a_closing_opening.cpp
basic_exercises/exercise7/b/: Makefile
doc/: exercise_2d.tex  exercise_9a.tex
doc/presentation_report/: Dental.tex  Homographies.tex  Introduction.tex  Panoramic.tex  Perspective.tex  presentation_report.tex
doc/sift_algorithm/: Sift_algorithm.tex
doc/sift_algorithm/bib/: bibliography.bib
doc/sift_algorithm/bib/files/213/: tutorial_py_sift_intro.html
doc/theoretical_exercises/: Theoretical_exercises.tex  exercise_2d.tex  exercise_8a.tex
docker/: Dockerfile
exam/: Sergio_Marin_Final_Exam.docx
lib/Closing/: CMakeLists.txt  closing.cpp  closing.h
lib/Compare/: CMakeLists.txt  compare.cpp  compare.h
lib/Dilation/: CMakeLists.txt  dilation.cpp  dilation.h
lib/Erosion/: CMakeLists.txt  erosion.cpp  erosion.h
lib/Flatzone/: CMakeLists.txt  flatzone.cpp  flatzone.h
lib/Infimum/: CMakeLists.txt  infimum.cpp  infimum.h
lib/Neighbors/: CMakeLists.txt  neighbors.cpp  neighbors.h
lib/Opening/: CMakeLists.txt  opening.cpp  opening.h
lib/Supremum/: CMakeLists.txt  supremum.cpp  supremum.h
ppt/: Dental.tex  Homographies.tex  Introduction.tex  Panoramic.tex  Perspective.tex  beamerthemesintef.sty  bibliography.bib  presentation.tex  sintefcolor.sty
src/classification/color_clustering/: color_clustering.ipynb
src/classification/histogram_equalization/: histrogram_equalization.ipynb
src/classification/keypoint_feature_extraction/: authors.txt  keypoint.ipynb
src/classification/mammography/: mammography.ipynb
src/classification/yolo_v3/: yolo_v3.ipynb
src/classification/yolo_v5/: yolo_v5.ipynb
src/exercise1/: Makefile
src/exercise11/: Makefile  exercise_11a_flatzone.cpp  exercise_11a_flatzone.h  exercise_11a_flatzone.hpp
src/exercise12/: exercise_12a_fznumber.cpp  exercise_12a_fznumber.h
src/exercise13/: exercise_13a_minimum.cpp  exercise_13a_minimum.h  exercise_13b_maximum.cpp  exercise_13b_maximum.h  exercise_13c_minima.cpp  exercise_13d_maxima.cpp  exercise_13d_maxima.h
src/exercise2/: exercise_02a_thresh.cpp  exercise_02b_compare.cpp  exercise_02b_compare.h  exercise_02c_inf.cpp  exercise_02c_sup.cpp
src/exercise2/b/: exercise_02b_compare.cpp
src/exercise2/c/: Makefile
src/exercise21/: exercise_21a_mnist_nn.ipynb  im1__4__filtered.pgm  im1__4__noisy.pgm
src/exercise21/simple_ml/: Simple_MNIST_NN_from_scratch_11.py  Simple_MNIST_NN_from_scratch_11__with_displaying__.py  Simple_MNIST_NN_from_scratch_11__with_no_displaying__.py  Var__noise1.py  __init__.py
src/exercise3/: exercise_03a_erosion.cpp  exercise_03b_dilation.cpp
src/exercise3/a/: Makefile  exercise_03a_erosion.cpp  exercise_03a_erosion.hpp
src/exercise4/: exercise_04a_opening.cpp  exercise_04b_closing.cpp
src/exercise4/a/: exercise_04a_opening.hpp
src/exercise4/b/: Makefile
src/exercise5/: README.md  exercise_05a.sh  exercise_05b.sh
src/exercise5/a/: exercise_04a_opening.cpp
src/exercise5/b/: Makefile  dilation.hpp  exercise_04b_closing.hpp
src/exercise6/: exercise_06a_closing_opening.cpp  exercise_06b_opening_closing.cpp
src/exercise6/a/: Makefile  closing.hpp  exercise_06a_closing_opening.cpp  opening.cpp
src/exercise7/: README.md  exercise_07a.sh  exercise_07b.sh
src/exercise7/a/: dilation.cpp
src/exercise7/b/: exercise_06b_opening_closing.cpp  opening.hpp
src/minima_imposition/: exercise_minima_imposition.cpp
src/segmentation1/: practice_01a_boundary_extraction.cpp  practice_01a_boundary_extraction.h  practice_01b_grassfire_algorithm.cpp  practice_01b_grassfire_algorithm.h
src/segmentation2/: practice_02a_wheel_teeth_count.cpp  practice_02a_wheel_teeth_count.h  practice_02b_coffee_grains.cpp  practice_02b_coffee_grains.h
src/segmentation3/: practice_03a_coffee_grains.cpp  practice_03a_coffee_grains.h  practice_03b_fast_watershed.cpp  practice_03b_fast_watershed.h
text/exercise21/: Exercises_21a_1.txt  Readme.txt
